--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="box-sgtm">
-  <!-- <section class="sgtm-header shadow-2">
+  <section class="sgtm-header shadow-2">
       <sgtm-header></sgtm-header>
-  </section> -->
+  </section>
   <!-- <section class="sgtm-menu">
       <app-menu></app-menu>
   </section> -->
