--- a/src/app/inicio/pages/inicio/inicio.component.html
+++ b/src/app/inicio/pages/inicio/inicio.component.html
@@ -1,5 +1,5 @@
-<header>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+<!-- <header>
+    
     <div class="header-title d-flex justify-content-center">                
         <img width="40" height="40" src="../assets/image/icon-sistema-catastral.svg">
         <div class="ml-2 d-flex align-items-center">
@@ -22,8 +22,9 @@
           </ul>
           <a class="nav-right" (click)="cerrar_sesion()" data-toggle="tooltip" data-placement="right" title="Cerrar sesión"><i class="fa-solid fa-right-from-bracket"></i></a>
     </div>
-</header>
+</header> -->
 <div class="box-section">
+    
     <div class="tab-content shadow-sm" id="myTabContent">
       <div class="tab-pane fade show" id="inicio" role="tabpanel" aria-labelledby="inicio-tab">Inicio</div>
       <div class="tab-pane fade show active" id="formulario" role="tabpanel" aria-labelledby="formulario-tab">
@@ -500,10 +501,25 @@
                 </div>
                 <hr>
                 <div class="btn-form d-flex align-items-center justify-content-center">
-                    <button type="submit" class="btn btn-dark" onclick="scrollToTop()">Ir al inicio<i class="fa-solid fa-arrow-up ml-2"></i></button>
+                    <button type="submit" class="btn btn-dark">Ir al inicio<i class="fa-solid fa-arrow-up ml-2"></i></button>
                 </div>
+                <p-accordion>
+                    <p-accordionTab header="Header 1" [selected]="true">
+                       Content 1
+                    </p-accordionTab>
+                    <p-accordionTab header="Header 2">
+                        Content 2
+                    </p-accordionTab>
+                    <p-accordionTab header="Header 3">
+                        Content 3   
+                    </p-accordionTab>
+                </p-accordion>
             </form>
         </div>
       </div>
     </div> 
+    <!-- JS includes -->  
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </div>
