--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,6 +7,7 @@
 @import '../src/assets/designer/fontawesome-free-6.2.1-web/css/fontawesome.css';
 @import '../src/assets/designer/fontawesome-free-6.2.1-web/css/brands.css';
 @import '../src/assets/designer/fontawesome-free-6.2.1-web/css/solid.css';
+@import url('https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css');
 
 
 // primeng
